svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: test
spec:
  selector:
    app: test-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
