ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-ingress
spec:
  rules:
    - host: your-domain.com
      http:
        paths:
          - path: /
            backend:
              serviceName: nginx-service
              servicePort: 80
